welcome.lessons.welcome.loopfor.LoopFor.scala.code
var n = 0
while (estSurBiscuit()==false) {
	avance();
	n = n+1;
}
prendsBiscuit();
for (compteur <- 1 to n) {
	recule();
}
